# librebecca

./: .directory  CMakeLists.txt  INSTALL  README  TODO  copyright
aiml/basic_aiml/: basics.aiml
aiml/custom_tags/: reverse.aiml
conf/: Removeproperties.xml  clientconfig.properties  properties.xml  serverStartupFile.properties  serverconfig.properties
doc/: doxygen-warnings-api+framework+samples.txt  doxygen-warnings-api+framework.txt  doxygen-warnings-api.txt  doxygen-warnings-csharp-api.txt  doxygen-warnings-java-api.txt  doxygen-warnings-python-api.txt  release-notes
doc/api+framework+samples/html/: _a_i_m_l_8h-source.html  _a_i_m_l_engine_8h-source.html  _a_i_m_l_engine_thread_8h-source.html  _aiml_facade_8h-source.html  _bot_8h-source.html  _call_backs_8h-source.html  _category_8h-source.html  _condition_8h-source.html  _custom_a_i_m_l_8h-source.html  _custom_tags_8h-source.html  _custom_tags_impl_8h-source.html  _custom_text_edit_8h-source.html  _custom_topic_8h-source.html  _date_8h-source.html  _exceptions_8h-source.html  _formal_8h-source.html  _framework_factory_8h-source.html  _gender_8h-source.html  _get_8h-source.html  _gossip_8h-source.html  _graph_builder_8h-source.html  _graph_builder_framework_8h-source.html  _html_8h-source.html  _html_converter_internal_programmer_error_exception_8h-source.html  _id_8h-source.html  _identification_manager_8h-source.html  _inner_a_i_m_l_8h-source.html  _inner_category_8h-source.html  _inner_template_8h-source.html  _inner_template_a_i_m_l_tags_8h-source.html  _inner_template_list_impl_8h-source.html  _inner_topic_8h-source.html  _input_8h-source.html  _learn_8h-source.html  _li_8h-source.html  _links_8h-source.html  _lower_case_8h-source.html  _main_window_8h-source.html  _network_aiml_facade_8h-source.html  _network_graph_builder_8h-source.html  (+321 more)
doc/api+framework/html/: _a_i_m_l_8h-source.html  _aiml_facade_8h-source.html  _bot_8h-source.html  _call_backs_8h-source.html  _category_8h-source.html  _condition_8h-source.html  _custom_tags_8h-source.html  _date_8h-source.html  _exceptions_8h-source.html  _formal_8h-source.html  _framework_factory_8h-source.html  _gender_8h-source.html  _get_8h-source.html  _gossip_8h-source.html  _graph_builder_8h-source.html  _graph_builder_framework_8h-source.html  _id_8h-source.html  _identification_manager_8h-source.html  _inner_a_i_m_l_8h-source.html  _inner_category_8h-source.html  _inner_template_8h-source.html  _inner_template_list_impl_8h-source.html  _inner_topic_8h-source.html  _input_8h-source.html  _learn_8h-source.html  _li_8h-source.html  _lower_case_8h-source.html  _network_aiml_facade_8h-source.html  _network_graph_builder_8h-source.html  _non_implemented_8h-source.html  _pattern_8h-source.html  _pattern_side_that_8h-source.html  _person2_8h-source.html  _person_8h-source.html  _plain_word_8h-source.html  _random_8h-source.html  _remove_a_i_m_l_8h-source.html  _remove_topic_8h-source.html  _sentence_8h-source.html  _set_8h-source.html  (+204 more)
doc/api+samples/html/: _a_i_m_l_engine_8h-source.html  _a_i_m_l_engine_thread_8h-source.html  _aiml_facade_8h-source.html  _call_backs_8h-source.html  _custom_text_edit_8h-source.html  _exceptions_8h-source.html  _graph_builder_8h-source.html  _main_window_8h-source.html  _network_aiml_facade_8h-source.html  _network_graph_builder_8h-source.html  _qt_gui_call_backs_8h-source.html  _string_pimpl_8h-source.html  all_8h-source.html  annotated.html  classmy_call_backs-members.html  classmy_call_backs.html  classqtgui_1_1_a_i_m_l_engine-members.html  classqtgui_1_1_a_i_m_l_engine.html  classqtgui_1_1_a_i_m_l_engine_thread-members.html  classqtgui_1_1_a_i_m_l_engine_thread.html  classqtgui_1_1_custom_text_edit-members.html  classqtgui_1_1_custom_text_edit.html  classqtgui_1_1_main_window-members.html  classqtgui_1_1_main_window.html  classqtgui_1_1_qt_gui_call_backs-members.html  classqtgui_1_1_qt_gui_call_backs.html  classrebecca_1_1impl_1_1_aiml_facade-members.html  classrebecca_1_1impl_1_1_aiml_facade.html  classrebecca_1_1impl_1_1_call_backs-members.html  classrebecca_1_1impl_1_1_call_backs.html  classrebecca_1_1impl_1_1_directory_not_found_exception-members.html  classrebecca_1_1impl_1_1_directory_not_found_exception.html  (+90 more)
doc/doxygen/: Doxyfile_api  Doxyfile_api+framework  Doxyfile_api+framework+samples  Doxyfile_api+samples  Doxyfile_csharp_api  Doxyfile_java_api  Doxyfile_python_api  README
doc/userGuide/: mike02.css  userGuide.htm
doc/web/: 2005_wrap_up.htm  contact.htm  development.htm  documentation.htm  download.htm  index.htm  links.htm  lists.htm  regressionTest-095.htm  regressionTest-096.htm  regressionTest-097.htm  regressionTest-0971.htm  regressionTest-0982.htm  regressionTest-0983.htm  regressionTest-0984.htm  regressionTest-0986.htm  regressionTest-0987.htm  regressionTest-951.htm  talkAboutDesign1.htm  users.htm
include/rebecca/: AimlFacade.h  CallBacks.h  Exceptions.h  GraphBuilder.h  NetworkAimlFacade.h  NetworkGraphBuilder.h  StringPimpl.h  all.h  exports.h  network_all.h
resources/schema/: AIML.xsd
resources/testing/: AIML.aiml  footer.htm  header.htm
scripts/console/: .directory  Makefile  Makefile.in  Makefile.in~  Makefile~  console  console.in  console.in~
scripts/console-network/: Makefile  Makefile.in  Makefile.in~  Makefile~  console-network  console-network.in  console-network.in~  console-network~
scripts/consoleAIMLHtmlConverter/: Makefile  Makefile.in  Makefile.in~  Makefile~  consoleAIMLHtmlConverter  consoleAIMLHtmlConverter.in  consoleAIMLHtmlConverter.in~  consoleAIMLHtmlConverter~
scripts/qtgui/: qtgui  qtgui.in  qtgui.in~  qtgui~
scripts/rebecca-server/: rebecca-server  rebecca-server.in  rebecca-server.in~  rebecca-server~  serverconfig.in  serverconfig.in~  serverconfig.properties  serverconfig.properties~
scripts/regression/: regression  regression.in  regression.in~
scripts/rs-admin/: Makefile  Makefile.in  Makefile.in~  Makefile~  rs-admin  rs-admin.in  rs-admin.in~  rs-admin~
src/rebecca/: AimlFacade.cpp  GraphBuilder.cpp  StringPimpl.cpp
src/samples/: README
(+5219 files in other folders)
